--- a/MVVMCore/MainWindow.xaml
+++ b/MVVMCore/MainWindow.xaml
@@ -30,6 +30,10 @@
                 <DataTrigger Binding="{Binding IsBusy}" Value="True">
                   <Setter Property="Visibility" Value="Visible"/>
                 </DataTrigger>
+                <!--<DataTrigger Binding="{Binding IsOnHold}" Value="True"> --><!-- !!--><!--
+                  <Setter Property="Source" Value="pack://application:,,,/Images/onhold.png"/>
+                  <Setter Property="Width" Value="20"/>
+                </DataTrigger>-->
               </Style.Triggers>
             </Style>
           </Image.Style>
@@ -43,26 +47,6 @@
       </StackPanel>
     </DataTemplate>
 
-    <!-- TaskContainer -->
-    <Style x:Key="TaskContainer_ItemContainerStyle" TargetType="{x:Type ListBoxItem}">
-      <Setter Property="SnapsToDevicePixels" Value="True"/>
-      <Setter Property="Padding" Value="4,1"/>
-      <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-      <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-      <Setter Property="Background" Value="Transparent"/>
-      <Setter Property="BorderBrush" Value="Transparent"/>
-      <Setter Property="BorderThickness" Value="1"/>
-      <Setter Property="Focusable" Value="False"/>
-      <Setter Property="Template">
-        <Setter.Value>
-          <ControlTemplate TargetType="{x:Type ListBoxItem}">
-            <Border x:Name="Bd" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Padding="{TemplateBinding Padding}" SnapsToDevicePixels="true">
-              <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
-            </Border>
-          </ControlTemplate>
-        </Setter.Value>
-      </Setter>
-    </Style>
     
   </Window.Resources>
   <Canvas>
