Task Container working

--- a/MVVMCore/MainWindow.xaml
+++ b/MVVMCore/MainWindow.xaml
@@ -19,19 +19,34 @@
             <Style TargetType="Image">
               <Setter Property="Visibility" Value="Hidden"/>
               <Style.Triggers>
+                <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                  <BeginStoryboard  x:Name="SpinningStoryboard">
+                    <Storyboard>
+                      <DoubleAnimation Storyboard.TargetProperty="(Image.RenderTransform).(Angle)"
+                                       From="0" To="360" Duration="00:00:01.000" RepeatBehavior="Forever"/>
+                    </Storyboard>
+                  </BeginStoryboard>
+                </EventTrigger>
                 <DataTrigger Binding="{Binding IsBusy}" Value="True">
                   <DataTrigger.EnterActions>
-                    <BeginStoryboard>
+                    <ResumeStoryboard BeginStoryboardName="SpinningStoryboard"/>
+                    <!--<BeginStoryboard x:Name="SpinningStoryboard">
                       <Storyboard>
                         <DoubleAnimation Storyboard.TargetProperty="(Image.RenderTransform).(Angle)"
                                        From="0" To="360" Duration="00:00:01.000" RepeatBehavior="Forever"/>
                       </Storyboard>
-                    </BeginStoryboard>
+                    </BeginStoryboard>-->
                   </DataTrigger.EnterActions>
+                  <DataTrigger.ExitActions>
+                    <PauseStoryboard BeginStoryboardName="SpinningStoryboard"/>
+                  </DataTrigger.ExitActions>
                   <Setter Property="Source" Value="pack://application:,,,/Images/circle.png"/>
                   <Setter Property="Visibility" Value="Visible"/>
                 </DataTrigger>
                 <DataTrigger Binding="{Binding IsOnHold}" Value="True">
+                  <DataTrigger.EnterActions>
+                    <PauseStoryboard BeginStoryboardName="SpinningStoryboard"/>
+                  </DataTrigger.EnterActions>
                   <Setter Property="Source" Value="pack://application:,,,/Images/onhold.png"/>
                   <Setter Property="Visibility" Value="Visible"/>
                 </DataTrigger>
@@ -69,7 +84,7 @@
       </StackPanel>
     </DataTemplate>
 
-    
+
   </Window.Resources>
   <Canvas>
     <StackPanel Orientation="Horizontal" Canvas.Top="150" Canvas.Left="250">
@@ -108,8 +123,13 @@
 
 
     <Button Height="30" Width="40" Canvas.Left="295" Canvas.Top="187"
-            Command="{Binding RefreshAllCommand}"/>
-    <!--<ScrollViewer Canvas.Left="295" Canvas.Top="217" Height="350" VerticalScrollBarVisibility="Auto">-->
+            Command="{Binding RefreshAllCommand}"
+            IsEnabled="{Binding LoadingControls.AllDone}"/>
+    <TextBlock Canvas.Left="417" Canvas.Top="201" Foreground="Gray">
+      <Run Text="{Binding LoadingControls.DoneTasks, Mode=OneWay}"/>
+      /
+      <Run Text="{Binding LoadingControls.ContainTasks, Mode=OneWay}"/>
+    </TextBlock>
     <ListBox x:Name="TaskContainer" Canvas.Left="295" Canvas.Top="217" Height="350" 
              ItemsSource="{Binding LoadingControls}"
              ItemTemplate="{StaticResource LoadingButtonTemplate}"
@@ -122,7 +142,6 @@
 
 
     </ListBox>
-    <!--</ScrollViewer>-->
 
     <Button Canvas.Left="712" Canvas.Top="42" Height="40" Width="40"
             Command="{Binding OpenChildWindowCommand}"/>
