--- a/MVVMCore/MainWindow.xaml
+++ b/MVVMCore/MainWindow.xaml
@@ -7,65 +7,61 @@
         mc:Ignorable="d"
         Title="{Binding Title}" Height="650" Width="800">
   <Window.Resources>
-    <DataTemplate x:Key="LoadingButtonTemplate">
+    <DataTemplate x:Key="LoadingButton_Template">
       <StackPanel Orientation="Horizontal">
-        <Image x:Name="SpinImage"
-               Width="20" 
-               RenderOptions.BitmapScalingMode="HighQuality" RenderTransformOrigin="0.5,0.5">
-          <Image.RenderTransform>
-            <RotateTransform x:Name="ImageRotateTransform" Angle="0"/>
-          </Image.RenderTransform>
-          <Image.Style>
-            <Style TargetType="Image">
-              <Setter Property="Visibility" Value="Hidden"/>
-              <Style.Triggers>
-                <EventTrigger RoutedEvent="FrameworkElement.Loaded">
-                  <BeginStoryboard  x:Name="SpinningStoryboard">
-                    <Storyboard>
-                      <DoubleAnimation Storyboard.TargetProperty="(Image.RenderTransform).(Angle)"
-                                       From="0" To="360" Duration="00:00:01.000" RepeatBehavior="Forever"/>
-                    </Storyboard>
-                  </BeginStoryboard>
-                </EventTrigger>
-                <DataTrigger Binding="{Binding IsBusy}" Value="True">
-                  <DataTrigger.EnterActions>
-                    <ResumeStoryboard BeginStoryboardName="SpinningStoryboard"/>
-                    <!--<BeginStoryboard x:Name="SpinningStoryboard">
+        <Grid Width="20" >
+          <!-- Картинка индикатор загрузки -->
+          <Image x:Name="SpinImage"
+                 Source="pack://application:,,,/Images/circle.png"
+                 RenderOptions.BitmapScalingMode="HighQuality" RenderTransformOrigin="0.5,0.5">
+            <Image.RenderTransform>
+              <RotateTransform x:Name="ImageRotateTransform" Angle="0"/>
+            </Image.RenderTransform>
+            <Image.Style>
+              <Style TargetType="Image">
+                <Setter Property="Visibility" Value="Hidden"/>
+                <Style.Triggers>
+                  <!-- Синхронизированная крутилка для всех -->
+                  <EventTrigger RoutedEvent="FrameworkElement.Loaded">
+                    <BeginStoryboard  x:Name="SpinningStoryboard">
                       <Storyboard>
                         <DoubleAnimation Storyboard.TargetProperty="(Image.RenderTransform).(Angle)"
-                                       From="0" To="360" Duration="00:00:01.000" RepeatBehavior="Forever"/>
+                                         From="0" To="360" Duration="00:00:01.000" RepeatBehavior="Forever"/>
                       </Storyboard>
-                    </BeginStoryboard>-->
-                  </DataTrigger.EnterActions>
-                  <DataTrigger.ExitActions>
-                    <PauseStoryboard BeginStoryboardName="SpinningStoryboard"/>
-                  </DataTrigger.ExitActions>
-                  <Setter Property="Source" Value="pack://application:,,,/Images/circle.png"/>
-                  <Setter Property="Visibility" Value="Visible"/>
-                </DataTrigger>
-                <DataTrigger Binding="{Binding IsOnHold}" Value="True">
-                  <DataTrigger.EnterActions>
-                    <PauseStoryboard BeginStoryboardName="SpinningStoryboard"/>
-                  </DataTrigger.EnterActions>
-                  <Setter Property="Source" Value="pack://application:,,,/Images/onhold.png"/>
-                  <Setter Property="Visibility" Value="Visible"/>
-                </DataTrigger>
-              </Style.Triggers>
-            </Style>
-          </Image.Style>
-        </Image>
-        <!--<Image Source="pack://application:,,,/Images/onhold.png" Width="20" RenderOptions.BitmapScalingMode="HighQuality">
-          <Image.Style>
-            <Style TargetType="Image">
-              <Setter Property="Visibility" Value="Collapsed"/>
-              <Style.Triggers>
-                <DataTrigger Binding="{Binding IsOnHold}" Value="True">
-                  <Setter Property="Visibility" Value="Visible"/>
-                </DataTrigger>
-              </Style.Triggers>
-            </Style>
-          </Image.Style>
-        </Image>-->
+                    </BeginStoryboard>
+                  </EventTrigger>
+                  <DataTrigger Binding="{Binding IsBusy}" Value="True">
+                    <Setter Property="Visibility" Value="Visible"/>
+                  </DataTrigger>
+                </Style.Triggers>
+              </Style>
+            </Image.Style>
+          </Image>
+          <Image RenderOptions.BitmapScalingMode="HighQuality">
+            <Image.Style>
+              <Style TargetType="Image">
+                <Setter Property="Visibility" Value="Collapsed"/>
+                <Style.Triggers>
+                  <!-- Картинка OnHold -->
+                  <DataTrigger Binding="{Binding IsOnHold}" Value="True">
+                    <Setter Property="Source" Value="pack://application:,,,/Images/onhold.png"/>
+                    <Setter Property="Visibility" Value="Visible"/>
+                  </DataTrigger>
+                  <!-- Картинка всё Ок -->
+                  <DataTrigger Binding="{Binding Status, Converter={StaticResource EnumEqualsParameterConverter}, ConverterParameter=OK}" Value="True">
+                    <Setter Property="Source" Value="pack://application:,,,/Images/check.png"/>
+                    <Setter Property="Visibility" Value="Visible"/>
+                  </DataTrigger>
+                  <!-- Картинка проблемы -->
+                  <DataTrigger Binding="{Binding Status, Converter={StaticResource EnumEqualsParameterConverter}, ConverterParameter=NegativeResult}" Value="True">
+                    <Setter Property="Source" Value="pack://application:,,,/Images/error.png"/>
+                    <Setter Property="Visibility" Value="Visible"/>
+                  </DataTrigger>
+                </Style.Triggers>
+              </Style>
+            </Image.Style>
+          </Image>
+        </Grid>
         <FrameworkElement Width="20"/>
         <Button Command="{Binding RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}, Path=DataContext.LoadEmulationCommand}"
                 CommandParameter="{Binding }"
@@ -132,11 +128,11 @@
     </TextBlock>
     <ListBox x:Name="TaskContainer" Canvas.Left="295" Canvas.Top="217" Height="350" 
              ItemsSource="{Binding LoadingControls}"
-             ItemTemplate="{StaticResource LoadingButtonTemplate}"
+             ItemTemplate="{StaticResource LoadingButton_Template}"
              ItemContainerStyle="{DynamicResource TaskContainer_ItemContainerStyle}" >
       <ListBox.ItemsPanel>
         <ItemsPanelTemplate>
-          <StackPanel/> <!-- By default Virtualization Panel which block RefreshAllCommand -->
+          <StackPanel IsEnabled="{Binding LoadingControls.AllDone}"/> <!-- By default Virtualization Panel which block RefreshAllCommand -->
         </ItemsPanelTemplate>
       </ListBox.ItemsPanel>
 
