--- a/MVVMCore/ResourceDictionary.xaml
+++ b/MVVMCore/ResourceDictionary.xaml
@@ -21,5 +21,106 @@
       </Setter.Value>
     </Setter>
   </Style>
+  <!-- TaskContainer Refesh button -->
+  <SolidColorBrush x:Key="Button.MouseOver.Background" Color="#FFBEE6FD"/>
+  <SolidColorBrush x:Key="Button.MouseOver.Border" Color="#FF3C7FB1"/>
+  <SolidColorBrush x:Key="Button.Pressed.Background" Color="#FFC4E5F6"/>
+  <SolidColorBrush x:Key="Button.Pressed.Border" Color="#FF2C628B"/>
+  <SolidColorBrush x:Key="Button.Disabled.Background" Color="#FFF4F4F4"/>
+  <SolidColorBrush x:Key="Button.Disabled.Border" Color="#FFADB2B5"/>
+  <SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383"/>
+  <Style x:Key="TaskContainer_RefreshButton" TargetType="{x:Type Button}">
+    <!-- Keyboard focus style -->
+    <Setter Property="FocusVisualStyle">
+      <Setter.Value>
+        <Style>
+          <Setter Property="Control.Template">
+            <Setter.Value>
+              <ControlTemplate>
+                <Ellipse Width="25" Height="25" Stroke="Black" StrokeDashArray="2 2 "/>
+              </ControlTemplate>
+            </Setter.Value>
+          </Setter>
+        </Style>
+      </Setter.Value>
+    </Setter>
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type Button}">
+          <Grid>
+            <Ellipse x:Name="ellipse" Fill="{TemplateBinding Background}" Stroke="{TemplateBinding BorderBrush}" SnapsToDevicePixels="True"/>
+            <ContentPresenter x:Name="contentPresenter" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+          </Grid>
+          <ControlTemplate.Triggers>
+            <Trigger Property="IsDefaulted" Value="true">
+              <Setter Property="Stroke" TargetName="ellipse" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="true">
+              <Setter Property="Fill" TargetName="ellipse" Value="{StaticResource Button.MouseOver.Background}"/>
+              <Setter Property="Stroke" TargetName="ellipse" Value="{StaticResource Button.MouseOver.Border}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="true">
+              <Setter Property="Fill" TargetName="ellipse" Value="{StaticResource Button.Pressed.Background}"/>
+              <Setter Property="Stroke" TargetName="ellipse" Value="{StaticResource Button.Pressed.Border}"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="false">
+              <Setter Property="Fill" TargetName="ellipse" Value="{StaticResource Button.Disabled.Background}"/>
+              <Setter Property="Stroke" TargetName="ellipse" Value="{StaticResource Button.Disabled.Border}"/>
+              <Setter Property="TextElement.Foreground" TargetName="contentPresenter" Value="{StaticResource Button.Disabled.Foreground}"/>
+            </Trigger>
+          </ControlTemplate.Triggers>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+  </Style>
+  
+  
+  <Style x:Key="ButtonStyle1" TargetType="{x:Type Button}">
+
+
+    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+    <Setter Property="VerticalContentAlignment" Value="Center"/>
+    <Setter Property="Padding" Value="1"/>
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type Button}">
+
+          <Grid>
+            <Ellipse x:Name="border" Fill="{TemplateBinding Background}" Stroke="{TemplateBinding Foreground}"  />
+            <ContentPresenter  HorizontalAlignment="Center" VerticalAlignment="Center">
+            </ContentPresenter>
+          </Grid>
+          <ControlTemplate.Triggers>
+            <Trigger Property="IsPressed" Value="True">
+              <Setter Property="Fill" TargetName="border">
+                <Setter.Value>
+                  <RadialGradientBrush GradientOrigin="0.496,1.052">
+                    <RadialGradientBrush.RelativeTransform>
+                      <TransformGroup>
+                        <ScaleTransform CenterX="0.5" CenterY="0.5" ScaleX="1.5" ScaleY="1.5"/>
+                        <TranslateTransform X="0.02" Y="0.3"/>
+                      </TransformGroup>
+                    </RadialGradientBrush.RelativeTransform>
+                    <GradientStop Color="#00000000" Offset="1"/>
+                    <GradientStop Color="#FF303030" Offset="0.3"/>
+                  </RadialGradientBrush>
+                </Setter.Value>
+              </Setter>
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+              <Setter Property="Stroke" TargetName="border" Value="#FF33962B"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="False">
+              <Setter Property="Opacity" TargetName="border" Value="0.25"/>
+            </Trigger>
+
+          </ControlTemplate.Triggers>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+
+  </Style>
+  
+  
   
 </ResourceDictionary>
