--- a/MVVMCore/MainWindow.xaml
+++ b/MVVMCore/MainWindow.xaml
@@ -118,6 +118,16 @@
       </Button>
     </StackPanel>
 
+    <!--<Path Stroke="Red">
+      <Path.Data>
+        <PathGeometry Figures="M 0,150
+    C 0,0 0,0 250,0
+      500,0 500,0 500,150
+      500,300 500,300 250,300
+      0,300 0,300 0,150" />
+      </Path.Data>
+    </Path>-->
+    <!-- M 0, 62.980000000000004C 0, 31.490000000000002 31.490000000000002, 0 284, 0S 568, 31.490000000000002 568, 62.980000000000004S 536.51, 125.96000000000001 284, 125.96000000000001S 0, 94.47 0, 62.980000000000004 Z -->
 
     <Grid Canvas.Left="295" Canvas.Top="187">
       <Grid.RowDefinitions>
@@ -155,7 +165,7 @@
 
     <Button Style="{DynamicResource ButtonStyle1}" Canvas.Left="712" Canvas.Top="42" Height="40" Width="40"
             Command="{Binding OpenChildWindowCommand}">
-      Open Window Button
+      Open
     </Button>
   </Canvas>
 </Window>
