--- a/WpfCustomApplication/Views/Dispatcher.xaml
+++ b/WpfCustomApplication/Views/Dispatcher.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WpfCustomApplication.DefaultPage"
+﻿<UserControl x:Class="WpfCustomApplication.Dispatcher"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,11 +6,7 @@
              xmlns:local="clr-namespace:WpfCustomApplication"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-  <Grid>
-    <TextBlock Text="TextBlock" HorizontalAlignment="Left"/>
-    <CheckBox HorizontalAlignment="Center" VerticalAlignment="Center"
-              Content="Block tab closing"
-              IsChecked="{Binding Blocked}"/>
-    <Label Content="Label" HorizontalAlignment="Right"/>
-  </Grid>
+    <Grid>
+            
+    </Grid>
 </UserControl>
