ObservablePairCollection, новый способ хранить вкладки

--- a/WpfCustomApplication/TabPager/TabPager.xaml
+++ b/WpfCustomApplication/TabPager/TabPager.xaml
@@ -225,7 +225,7 @@
   </UserControl.Resources>
   <Grid>
     <TabControl x:Name="TabElement" TabStripPlacement="Left"
-                ItemsSource="{Binding AllTabPages}" 
+                ItemsSource="{Binding AllTabPages.Values}" 
                 SelectedItem="{Binding SelectedTab}"
                 ItemContainerStyle="{DynamicResource TabControlItemContainerStyle}">
       <!-- Заголовки -->
