--- a/WpfCustomApplication/TabPager/TabPager.xaml
+++ b/WpfCustomApplication/TabPager/TabPager.xaml
@@ -48,7 +48,7 @@
               <Border x:Name="mainBorder" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,1,1,0" Margin="0">
                 <Border x:Name="innerBorder" Background="{StaticResource TabItem.Selected.Background}" BorderBrush="{StaticResource TabItem.Selected.Border}" BorderThickness="1,1,1,0" Margin="-1" Opacity="0"/>
               </Border>
-              <ContentPresenter x:Name="contentPresenter" ContentSource="Header" Focusable="False" HorizontalAlignment="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
+              <ContentPresenter x:Name="contentPresenter" ContentSource="Header" Focusable="False" HorizontalAlignment="Stretch" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{Binding VerticalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
             </Grid>
             <ControlTemplate.Triggers>
               <!--Custom triggers-->
@@ -231,11 +231,12 @@
       <!-- Заголовки -->
       <TabControl.ItemTemplate>
         <DataTemplate>
-          <StackPanel Orientation="Horizontal">
-            <UserControl Content="{Binding Title}"/>
-            <Button Margin="5,0,0,0" Width="15" Visibility="{Binding CanClose, Converter={StaticResource BoolToHiddenConverter}}"
-                Command="{Binding CloseCommand}"/>
-          </StackPanel>
+          <DockPanel LastChildFill="True" Width="125">
+            <Button Margin="5,0,0,0" Width="15" DockPanel.Dock="Right"
+                    Visibility="{Binding CanClose, Converter={StaticResource BoolToHiddenConverter}}"
+                    Command="{Binding CloseCommand}"/>
+            <UserControl Content="{Binding Title}" DockPanel.Dock="Left" HorizontalContentAlignment="Center"/>
+          </DockPanel>
         </DataTemplate>
       </TabControl.ItemTemplate>
       <!-- Содержимое -->
